--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 ## I did not write this. I got this from the link above.
 
+include/GLFW/*
+
 # User-specific files
 *.rsuser
 *.suo
@@ -68,6 +70,7 @@ ScaffoldingReadMe.txt
 
 # StyleCop
 StyleCopReport.xml
+
 
 # Files built by Visual Studio
 *.lib
