--- a/Renderer/Renderer/Renderer.vcxproj.filters
+++ b/Renderer/Renderer/Renderer.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="Class.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
