--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 include/GLFW/*
 lib/*
 /__pycache__/*
-/Debug-windows-x86_64/
+/Debug-windows-x86_64/*
+/efgl/vendor/GLFW/*
 
 # User-specific files
 *.rsuser
