--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "efgl/vendor/GLFW"]
 	path = efgl/vendor/GLFW
 	url = https://github.com/TheCherno/glfw
+[submodule "efgl/vendor/glm"]
+	path = efgl/vendor/glm
+	url = https://github.com/g-truc/glm
