--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,13 @@
 
 [submodule "efgl/vendor/GLFW"]
-	path = efgl/vendor/GLFW
+	path = vendor/GLFW
 	url = https://github.com/TheCherno/glfw
 [submodule "efgl/vendor/glm"]
-	path = efgl/vendor/glm
+	path = vendor/glm
 	url = https://github.com/g-truc/glm
 [submodule "efgl/vendor/assimp"]
-	path = efgl/vendor/assimp
+	path = vendor/assimp
 	url = https://github.com/AminAliari/assimp.git
 [submodule "efgl/vendor/imgui"]
-	path = efgl/vendor/imgui
+	path = vendor/imgui
 	url = https://github.com/TheCherno/imgui.git
