--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -26,5 +26,10 @@ ViewportId=0x7D044E18
 Size=460,259
 Collapsed=0
 
+[Window][Subdivision debugging]
+Pos=60,60
+Size=200,100
+Collapsed=0
+
 [Docking][Data]
 
