stowed subdivision demo

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -27,7 +27,8 @@ Size=460,259
 Collapsed=0
 
 [Window][Subdivision debugging]
-Pos=60,60
+ViewportPos=1408,290
+ViewportId=0x0CBAD987
 Size=200,100
 Collapsed=0
 
