Added phong demo, preparing for clustering

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -32,5 +32,11 @@ ViewportId=0x0CBAD987
 Size=200,100
 Collapsed=0
 
+[Window][Phong Scene Debug Menu]
+ViewportPos=1207,117
+ViewportId=0xF4CBD424
+Size=572,172
+Collapsed=0
+
 [Docking][Data]
 
