--- a/efgl/imgui.ini
+++ b/efgl/imgui.ini
@@ -4,9 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Phong Scene Debug Menu]
-ViewportPos=1411,53
+ViewportPos=1419,179
 ViewportId=0xF4CBD424
 Size=576,306
+Collapsed=0
+
+[Window][Geodesic Sphere]
+Pos=60,60
+Size=32,35
 Collapsed=0
 
 [Docking][Data]
