moving files to other computer

--- a/efgl/imgui.ini
+++ b/efgl/imgui.ini
@@ -10,8 +10,9 @@ Size=576,306
 Collapsed=0
 
 [Window][Geodesic Sphere]
-Pos=60,60
-Size=32,35
+ViewportPos=1455,191
+ViewportId=0x32F3A110
+Size=494,207
 Collapsed=0
 
 [Docking][Data]
