--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-
 [submodule "efgl/vendor/GLFW"]
 	path = vendor/GLFW
 	url = https://github.com/TheCherno/glfw
@@ -13,4 +12,4 @@
 	url = https://github.com/assimp/assimp.git
 [submodule "vendor/imgui"]
 	path = vendor/imgui
-	url = https://github.com/ocornut/imgui.git
+	url = https://github.com/e-hat/imgui
